p2/configs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: nginx
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app-two-service
spec:
  selector:
    app: app-two
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
