p2/configs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: nginx
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app-three-service
spec:
  selector:
    app: app-three
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
